--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,35 @@
 body
 {
+	background-image: url(Confucius128px.jpg);
+}
+
+h1
+{
   background-color: green;
   color: magenta;
   text-align: center;
   font-size: 100px;
   font-family: "Comic Sans MS";
+}
+
+h2
+{
+  background-color: green;
+  color: yellow;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Comic Sans MS";
+}
+
+#annonce
+{
+	position: relative;
+	left: 50px;
+	width: 200px;
+	height: 60px;
+	background-color: red;
+	border: outset;
+	text-align: center;
 }
 
 #container
@@ -34,38 +59,41 @@ body
 	position: relative;
 	margin: 250px auto;
 	transform-style: preserve-3d;
-	animation: spin 30s infinite linear;
+	animation: spin 15s infinite linear;
 }
 
-#buche1
+.buche
 {
 	position: absolute;
 	width: 200px;
 	height: 300px;
-	background-image: url(buche1.jpg);
 	background-size: 200px 300px;
 	background-repeat: no-repeat;
+}
+
+.buche1
+{
+	background-image: url(buche1.jpg);
 	transform: translateY(-150px) translateZ(87px);
 }
 
-#buche2
+.buche2
 {
-	position: absolute;
-	width: 200px;
-	height: 300px;
 	background-image: url(buche2.jpg);
-	background-size: 200px 300px;
-	background-repeat: no-repeat;
 	transform: translateY(-150px) translateX(-50px) rotateY(60deg);
 }
 
-#buche3
+.buche3
 {
-	position: absolute;
-	width: 200px;
-	height: 300px;
 	background-image: url(buche3.jpg);
-	background-size: 200px 300px;
-	background-repeat: no-repeat;
 	transform: translateY(-150px) translateX(50px) rotateY(120deg);
+}
+
+#txtbuche
+{
+	color: blue;
+	text-align: center;
+	font-size: 30px;
+	font-family: "Comic Sans MS";
+	transform: translateY(-150px) translateX(200px);
 }
