--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,29 @@ h2
 	text-align: center;
 }
 
+#apropos
+{
+	position: relative;
+	left: 1050px;
+	bottom: 50px;
+	width: 400px;
+	height: 250px;
+	background-color: white;
+	border: outset;
+	text-align: center;
+}
+
+#auteur
+{
+	text-align: left;
+	margin: 20px;
+}
+
 #container
 {
 	position: relative;
+	bottom: 200px;
+	right: 200px;
 	height: 200px;
 	width: 200px;
 	margin: auto;
@@ -46,11 +66,11 @@ h2
 {
 	from
 	{
-		transform: rotateX(0deg) rotateY(0deg);
+		transform: rotateY(0deg);
 	}
 	to
 	{
-		transform: rotateX(360deg) rotateY(360deg);
+		transform: rotateY(360deg);
 	}
 }
 
@@ -87,6 +107,21 @@ h2
 {
 	background-image: url(buche3.jpg);
 	transform: translateY(-150px) translateX(50px) rotateY(120deg);
+}
+
+.terre
+{
+	background-image: url(globe.png);
+	transform: translateY(-150px) translateZ(-800px);
+}
+
+.lune
+{
+	width: 80px;
+	height: 80px;
+	background-size: 80px 80px;
+	background-image: url(lune.png);
+	transform: translateY(-150px) translateX(200px) translateZ(-1000px);
 }
 
 #txtbuche
